[package]
name = "ppm"
version = "0.1.0"
authors = ["nicolas ROCHE <nico_roche@hotmail.fr>", "Matthieu ALLEXANDRE <matthieu.allexandre@gmail.com>", "Antoine TAVERNIER <tavernier.antoine@hotmail.fr>"]
edition = "2018"

[lib]
name = "ppm"
crate-type = ["rlib", "dylib"] 

[dependencies]
image = "*"
ansi_rgb = "*"
rgb = "0.8"
